client/src/scss/main.scss
/**
 * Global styles go here.
 * CSS modules are enabled in the build process if you want
 * to declare styles specific to components; put a .scss file
 * in the /components/ComponentName folder and import into the
 * component.
 */


// colour scheme
$darkBlue: #638BBF;
$lightBlue: #89BAD9;
$darkerBlue: #436B9F;
$offGrey: #EEEEEE;
$offWhite: #F2F2F2;
$brown: #59596E;
$khaki: #6D7340;
$highlight: #FC531F;

@import '~normalize.css/normalize.css';

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
}

* {
  box-sizing: border-box;
}

body {
  font-size: 24px;
  font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
  color: $brown;
}

.container {
  display: block;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  display: flex;
  flex-flow: column nowrap;
}



// KegEdit component inlined into tap view
.tap .keg-edit {
  margin: 40px 0 0;
  padding: 40px 0 0;
  border-top: 1px solid #ccc;
}


// App Header
.app-header {
  background: $lightBlue;
  color: $offWhite;
  margin: 0;
  padding: 24px;
  flex: 0 0 auto;
  display: flex;

  h1 {
    font-weight: 800;
    color: white;
    font-size: 2rem;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
    margin: 0;
    flex: 1 0 0;

    span {
      color: #eee;
    }

    a {
      color: inherit;
      text-decoration: none;
    }
  }
}

// App Nav
.app-nav {
  padding: 0;
  background: $darkBlue;
  font-size: 18px;
  font-weight: 200;

  a {
    display: inline-block;
    color: $offGrey;
    text-decoration: none;
    padding: 8px 24px;

    &:hover {
      color: white;
    }
  }

  a + a {
    border-left: 1px solid $lightBlue;
  }

  .btn-app-nav-toggle {
    display: none;
  }

}


// Header Profile
.profile {
  position: relative;
  flex: 0 0 auto;

  .profile-avatar {
    width: 45px;
    height: auto;
    border-radius: 5px;
    cursor: pointer;
    vertical-align: middle;
  }

  .profile-nobody {
    font-size: 14px;

    a {
      color: white;
    }
  }

  .profile-menu {
    display: none;
    vertical-align: middle;

    &.show {
      display: inline-block;


      a {
        text-decoration: none;
        color: white;
        font-size: 1rem;
        margin-left: 1em;
      }

    }
  }

}




// App Content
.app-content {
  overflow-y: auto;
  flex: 1 1 auto;
}

// App Footer
.app-footer {
  text-align: center;
  font-size: 14px;
  padding: 1em;
  margin: 0;

  a {
    color: $lightBlue;
  }
}


// keg list
.keg-list {

  .button-group {
    text-align: center;
    margin: 1em 0 0;
  }

  .keg {
    border-bottom: 1px solid $lightBlue;
    padding: 24px;
  }

  .btn-new-keg {
    display: block;
    margin: 1em auto;
  }

  .keg-edit {
    padding: 20px;
  }
}


.keg-detail {
  padding: 24px;

  .keg {
    margin-bottom: 3em;
  }

  .keg-rating {
    display: none; // hide this, show keg-rating-detail instead
  }
}

.tap-change {
  padding: 24px;
}

.app-content > .keg-edit {
  padding: 24px;
}

// beer list view
.beer-list-view {
  padding: 24px;

  .btn-add-beer {
    margin: 0 auto 2em;
    display: block;
  }
}


.page-header {
  margin: 1em 0 2em;

  .page-title {
    font-size: 2.5rem;
    color: $darkBlue;
    margin: 0 0 0.5em;
  }

  .page-subtitle {
    font-size: 1.5rem;
    color: $khaki;
    font-weight: 400;
    margin: 0;
  }

  p {
    font-size: 1rem;
  }
}

.beer-list {
  margin-bottom: 2em;
}

.beer-list-item {

  display: flex;
  align-items: center;
  border-bottom: 1px solid $offGrey;
  padding: 0.5em 0;

  > header {
    flex: 2 1 0;
  }

  .meta, .votes {
    flex: 1 1 0;
  }

  .name {
    color: $lightBlue;
    margin: 0 0 8px;

    a {
      color: inherit;
      text-decoration: none;

      &:hover{
        text-decoration: underline;
      }
    }

    span {
      font-style: italic;
      font-size: 0.8em;
      color: $darkBlue;
      font-weight: 400;
    }
  }

  .variety {
    margin: 0;
    color: $khaki;
    font-weight: 400;
    font-size: 0.7em;
  }

  .meta {
    align-items: center;
    font-size: 0.7em;
    display: flex;

    span {
      flex: 1 1 0;
      margin-right: 2em;
    }
  }

  .votes {
    justify-content: flex-end;
    display: flex;

    .btn-vote, .btn-unvote {
      padding: 0.25em;
      font-size: 0.7em;
      display: inline;
      margin-right: 2em;
    }
  }
}


// responsiveness
@media (max-width: 600px) {

  .app-header h1 span {
    display: none;
  }

  .beer-list-view {
    .canbuy-help-text {
      display: none;
    }
  }

  .beer-list-item {
    flex-wrap: wrap;

    > header {
      flex: 0 0 100%;
    }

    .name span {
      display: block;
    }

    .meta {
      display: none;
    }

    .votes {
      margin: 1em 0 0;
    }
  }

  .beer-detail-view {
    .beer-details {
      .primary {
        flex: 0 0 100%;
      }

      .meta {
        text-align: left;
        margin: 0.5em 0 0;
      }

      .notes {
        margin: 1em 0;
      }
    }

    button {
      width: 100%;
      margin: 0 0 0.5em;
    }

    .beer-actions button + button {
      margin-left: 0;
    }
  }
}




// circular score thing
.beer-vote-total {
  background: $lightBlue;
  width: 30px;
  height: 30px;
  border-radius: 100%;
  color: white;
  text-align: center;
  font-size: 0.8em;
  line-height: 30px;
}

// beer detail view
.beer-detail-view {
  padding: 24px;

  .beer-details {
    border-bottom: 1px solid $offWhite;
    margin-bottom: 2em;
  }
}

// beer details. name, brewery, etc.
.beer-details {
  display: flex;
  flex-flow: row wrap;

  .primary {
    flex: 3 1 0;
  }

  .meta {
    flex: 1 1 0;
    font-size: 1.5rem;
    color: $lightBlue;
    text-align: right;

    > * {
      margin: 0 0 0.25em;
    }

    .avatar {
      display: block;
      margin: 0;
    }

    .can-buy {
      width: 40px;
      height: 40px;
    }
  }

  .name {
    margin: 0;
    font-size: 2rem;
    color: $darkBlue;
  }

  .brewery-name {
    margin: 0;
    font-size: 1.25rem;
    color: $lightBlue;
    font-weight: 400;
  }

  .variety {
    margin: 0.5em 0 0;
    font-size: 1rem;
    color: $khaki;
    font-weight: 200;
    font-style: italic;
  }

  .notes {
    flex: 0 0 100%;
    width: 100%;
    font-weight: 200;
    font-size: 1.2rem;
    white-space: pre-wrap;
    margin: 2em 0;
  }
}

.beer-actions {
  margin: 2em 0;

  button {
    font-size: 1rem;
  }

  button + button {
    margin-left: 0.5em;
  }
}

.beer-detail-votes {
  button {
    margin: 0 0 1em;
    font-size: 1rem;
  }

  .beer-vote-total {
    width: 60px;
    height: 60px;
    font-size: 34px;
    line-height: 60px;
    display: inline-block;
    vertical-align: top;
    margin: 0 1em 0 0;
  }
}



// buttons
button {
  border: 1px solid #ddd;
  border-radius: 4px;
  background: white;
  font-weight: 200;
  color: #89BAD9;

  cursor: pointer;
  padding: 0.5em 1em;

  &:hover {
    border: 1px solid #bbb;
  }
}

// button group
.button-group {
  button {
    font-size: 0.7em;
    border-radius: 0;
    margin-left: -1px; // collapse borders
    outline: none;

    &:first-child {
      border-radius: 4px 0 0 4px;
    }

    &:last-child {
      border-radius: 0 4px 4px 0;
    }

    &:hover {
      background: $offWhite;
    }

    &.active {
      background: $offGrey;
    }
  }
}


// emoji for rating beer

.emoji {
  background-size: 100%;
  display: inline-block;
  width: 30px;
  height: 30px;
}

.emoji-happy {
  @extend .emoji;
  background-image: url('../images/emoji-happy.svg');
}

.emoji-meh {
  @extend .emoji;
  background-image: url('../images/emoji-meh.svg');
}

.emoji-sad {
  @extend .emoji;
  background-image: url('../images/emoji-sad.svg');
}

.emoji-beer {
  @extend .emoji;
  background-image: url('../images/emoji-beer.svg');
}

.emoji-beers {
  @extend .emoji;
  background-image: url('../images/emoji-beers.svg')
}

// rate kegs
.keg-rating {
  display: flex;
  justify-content: flex-end;
  margin-top: 0.5em;

  .rating {
    margin-left: 24px;
    .icon {
      width: 24px;
      height: 24px;
      vertical-align: middle;
      margin-left: 6px;
      cursor: pointer;
    }
  }

  color: $lightBlue;
  font-size: 14px;

  span {
    font-size: 1rem;
  }
}


// keg rating detail
.keg-rating-detail {
  h3 {
    color: $darkBlue;
    font-size: 1.5rem;
    margin: 0 0 0.5em;

    .emoji {
      vertical-align: bottom;
    }
  }

  .rating-group {
    margin: 0 0 1em;
  }
}


// user detail
.user-detail {

  header {
    display: flex;
    align-items: center;
    margin: 0 0 2em;

    h2 {
      order: 1;
    }

    .avatar {
      order: 0;
      margin-right: 1em;
      width: 110px;
    }
  }

  padding: 24px;

  h2 {
    color: $darkBlue;
  }

  .avatar {
    border-radius: 12px;
  }
}

// user detail ratings
.user-detail-ratings {

  .emoji {
    vertical-align: bottom;
  }

  .rating {
    margin: 0 0 0.5em;
  }

  a {
    color: $lightBlue;
    text-decoration: none;
    &:hover {
      text-decoration: underline;
    }
  }
}

// notifications

.notifications {
  position: fixed;
  width: 100%;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
  font-size: 1rem;

  .notification {
    display: block;
    text-align: center;
    margin: 0;
    padding: 12px;
    cursor: pointer;
    background: $offWhite;
    border-bottom: 1px solid white;
    animation: fadein 0.25s linear;
    overflow: hidden;

    &:hover {
      background: #ddd !important;
    }

    &:nth-child(odd) {
      background: $offGrey;
    }
  }
}

// crud forms
.edit-form {
  font-size: 1.2rem;

  h1 {
    color: #638BBF;
    font-size: 1.6em;
    margin: 0 0 1em;
  }

  label {
    font-weight: 200;
    color: #638BBF;
    display: block;
    margin-bottom: 0.5em;
    font-size: 1em;
  }

  input, textarea {
    line-height: 1em;
    border-radius: 4px;
    border: 1px solid #ddd;
    width: 100%;
    display: block;
    width: 100%;
    margin: 0 0 1.5em;
    padding: 0.5em;
  }

  textarea {
    height: 4em;
  }

  input[type=checkbox] {
    // display: inline-block;
    width: auto;
    margin: 0 1em 1.5em 0;
  }

}


// avatars

.avatar {
  // make them sit horizontally by default
  display: inline-block;
  margin-right: 16px;

  img {
    border-radius: 4px;
  }
}

@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

